--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 				<span class="logo icon fa-paper-plane"></span>
 				<h1>Hello World</h1>
 				<h2>Suzy, here</h2>
-				<p>I am a full-stack software engineer with special interests in accessibility and positive enviromental impact</a>
+				<p>a full-stack software engineer</a>
 				<br />
-				 (and) making it look good.</p>
+				   && making it look good.</p>
 			</div>
 
 		<!-- Main -->
@@ -44,7 +44,7 @@
 						<a href="#" class="image icon solid fa-signal"><img src="images/pic01.jpg" alt="" /></a>
 						<div class="content">
 							<h3>Ladywolf Alchemy</h3>
-							<p>Custom full-stack web application for local esthetician and maker. Allows for client log-in and scheduling using OAuth.</p>
+							<p>Custom full-stack web application for local esthetician and maker. Allows for client log-in and scheduling as well as e-commerce connectivity.</p>
 						</div>
 					</section>
 					<section class="feature right">
@@ -208,7 +208,7 @@
 
 				<footer class="major container medium">
 					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
+					<p></p>
 					<ul class="actions special">
 						<li><a href="#" class="button">Join our crew</a></li>
 					</ul>
@@ -221,13 +221,12 @@
 				<div class="container medium">
 
 					<header class="major last">
-						<h2>Questions or comments?</h2>
+						<h2>Get in touch</h2>
 					</header>
 
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor
-					orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-
-					<form method="post" action="#">
+					<p></p>
+					<!--
+					<form method="post" action="mailto:suzybichl@gmail.com">
 						<div class="row">
 							<div class="col-6 col-12-mobilep">
 								<input type="text" name="name" placeholder="Name" />
@@ -245,13 +244,12 @@
 							</div>
 						</div>
 					</form>
-
+					-->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://twitter.com/byzus1" class="icon brands fa-twitter" target=”_blank”><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/suzyannah/" class="icon brands fa-instagram" target=”_blank”><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/suzby" class="icon brands fa-github" target=”_blank”><span class="label">Github</span></a></li>	
+						<li><a href="https://www.linkedin.com/in/suzy-bichl" class="icon brands fa-linkedin" target=”_blank”><span class="label">LinkedIn</span></a></li>	
 					</ul>
 
 					<ul class="copyright">
