--- a/html5-boilerplate_v8.0.0/index.html
+++ b/html5-boilerplate_v8.0.0/index.html
@@ -32,8 +32,8 @@
     <div>
       <h1>Suzy Bichl</h1>
       <span class="main-links">
-        <a href="projects">projects</a>
-        <a href="suzybichl.com">photo&styling</a>
+        
+        <a href="suzybichl.com" target="_blank">photo&styling</a>
       </span>
     </div>
   </header>
