--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1>Suzy Bichl</h1>
       <span class="main-links">
         
-        <a href="suzybichl.com" target="_blank">photo&styling</a>
+        <a href="https://suzybichl.com" target="_blank">photo&styling</a>
       </span>
     </div>
   </header>
