--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <img src="img/face.jpeg" alt="girl wearing sunglasses and sipping la croix at the beach">
   <!-- Add your site or application content here -->
     <p>My name is Suzy Bichl. I am a polymath, currently open to new opportunities in software engineering. <br>
-    I received my Bachelor of Fine Arts in Photography from Columbia College in Chicago; allowing me to take a deep dive into artistic processes and techniques. Following graduation, I moved to Seattle, Washington, where I began working in commercial photograpy and film production, later moving into web development and management. In my spare time, I enjoy growing edible plants, wrenching on my 1980 VW Vanagon, and exploring the wilderness with my dogs. </p>
+    I received my Bachelor of Fine Arts in Photography from Columbia College in Chicago; allowing me to take a deep dive into artistic processes and techniques. Following graduation, I moved to Seattle, Washington, where I began working in commercial photography and film production, later moving into web development and management. In my spare time, I enjoy growing edible plants, wrenching on my 1980 VW Vanagon, and exploring the wilderness with my dogs. </p>
   </main>
 
 
