correct deploy fail

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1>My Name is: Suzy Bichl</h1>
       <span class="main-links">
         <ul>
-       <li> <a href="papaya-peony-f140c3.netlify.app" target="_blank">NASA photo of the day &lt3 </a> </li>
+       <li> <a href="https://papaya-peony-f140c3.netlify.app/" target="_blank">NASA photo of the day &lt3 </a> </li>
        <li> <a href="https://suzybichl.com" target="_blank">photo&styling portfolio </a> </li>
       </ul>
       </span>
